--- a/Projekt_TAMZ_II/app/src/main/res/layout/activity_main.xml
+++ b/Projekt_TAMZ_II/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorPrimaryDark"
     tools:context=".MainActivity">
 
     <com.example.sokoban33.SokoView
@@ -18,91 +19,63 @@
 
     <Button
         android:id="@+id/buttonDown"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="56dp"
-        android:background="@color/color_1"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:background="@drawable/arrow_down"
         android:onClick="moveDown"
-        android:text="Down"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/buttonLeft" />
-
-    <Button
-        android:id="@+id/buttonUp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="160dp"
-        android:background="@color/color_1"
-        android:onClick="moveUp"
-        android:text="Up"
-        app:layout_constraintBottom_toTopOf="@+id/buttonDown"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonSpell1"
-        app:layout_constraintVertical_bias="1.0" />
-
-    <Button
-        android:id="@+id/buttonRight"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="56dp"
-        android:background="@color/color_1"
-        android:onClick="moveRight"
-        android:text="Right"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/buttonDown" />
+        app:layout_constraintTop_toBottomOf="@+id/buttonUp" />
 
     <Button
         android:id="@+id/buttonLeft"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="72dp"
-        android:layout_marginBottom="56dp"
-        android:background="@color/color_1"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:background="@drawable/arrow_left"
         android:onClick="moveLeft"
-        android:text="Left"
+        app:layout_constraintEnd_toStartOf="@+id/buttonDown"
+        app:layout_constraintTop_toBottomOf="@+id/buttonUp" />
+
+    <Button
+        android:id="@+id/buttonUp"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:background="@drawable/arrow_inverted"
+        android:onClick="moveUp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/sokoView"
+        app:layout_constraintVertical_bias="0.3" />
+
+    <Button
+        android:id="@+id/buttonRight"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:background="@drawable/arrow_right"
+        android:onClick="moveRight"
+        app:layout_constraintStart_toEndOf="@+id/buttonDown"
+        app:layout_constraintTop_toBottomOf="@+id/buttonUp" />
 
     <Button
         android:id="@+id/buttonSpell1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:background="@color/color_1"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:background="@drawable/spell_slot_selected"
         android:onClick="selectedSpell_1"
         android:text="Spell 1"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/sokoView" />
+        app:layout_constraintBottom_toTopOf="@+id/buttonLeft"
+        app:layout_constraintEnd_toStartOf="@+id/buttonUp" />
 
     <Button
         android:id="@+id/buttonSpell2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@color/color_2"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:background="@drawable/spell_slot"
         android:onClick="selectedSpell_2"
         android:text="Spell 2"
-        app:layout_constraintStart_toEndOf="@+id/buttonSpell1"
-        app:layout_constraintTop_toBottomOf="@+id/sokoView" />
-
-    <Button
-        android:id="@+id/buttonSpell3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@color/color_2"
-        android:onClick="selectedSpell_3"
-        android:text="Spell 3"
-        app:layout_constraintStart_toEndOf="@+id/buttonSpell2"
-        app:layout_constraintTop_toBottomOf="@+id/sokoView" />
-
-    <Button
-        android:id="@+id/buttonSpell4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@color/color_2"
-        android:onClick="selectedSpell_4"
-        android:text="Spell 4"
-        app:layout_constraintStart_toEndOf="@+id/buttonSpell3"
-        app:layout_constraintTop_toBottomOf="@+id/sokoView" />
+        app:layout_constraintBottom_toTopOf="@+id/buttonRight"
+        app:layout_constraintStart_toEndOf="@+id/buttonUp" />
 
     <TextView
         android:id="@+id/textView"
