--- a/Projekt_TAMZ_II/app/src/main/res/layout/activity_hero.xml
+++ b/Projekt_TAMZ_II/app/src/main/res/layout/activity_hero.xml
@@ -62,15 +62,15 @@
 
     <Button
         android:id="@+id/buttonSave"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="264dp"
+        android:layout_height="60dp"
         android:layout_marginTop="100dp"
         android:onClick="clickSubmit"
         android:text="Save"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="@+id/buttonWarrior"
         app:layout_constraintTop_toBottomOf="@+id/buttonWarrior"
-        app:layout_constraintVertical_bias="0.22000003" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/textViewClass"
