--- a/Projekt_TAMZ_II/app/src/main/res/layout/activity_lose.xml
+++ b/Projekt_TAMZ_II/app/src/main/res/layout/activity_lose.xml
@@ -10,6 +10,7 @@
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/allerta"
         android:text="You have lost\nthis game"
         android:textSize="36sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -22,6 +23,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:fontFamily="@font/allerta"
         android:onClick="tryAgain"
         android:text="Try again"
         app:layout_constraintStart_toStartOf="@+id/textView5"
@@ -31,6 +33,7 @@
         android:id="@+id/buttonToMenu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/allerta"
         android:onClick="toMenu"
         android:text="To main menu"
         app:layout_constraintStart_toEndOf="@+id/buttonTryAgain"
