--- a/Projekt_TAMZ_II/app/src/main/res/layout/activity_win_screen.xml
+++ b/Projekt_TAMZ_II/app/src/main/res/layout/activity_win_screen.xml
@@ -12,6 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@color/color_2"
+        android:fontFamily="@font/allerta"
         android:text="Your score is: "
         android:textSize="30sp"
         app:layout_constraintBottom_toTopOf="@+id/button5"
@@ -24,6 +25,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@color/color_3"
+        android:fontFamily="@font/allerta"
         android:text="score"
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="@+id/textView2"
@@ -34,6 +36,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/button"
+        android:fontFamily="@font/allerta"
         android:onClick="saveScoreButton"
         android:text="Save score"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -47,6 +50,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/button"
+        android:fontFamily="@font/allerta"
         android:onClick="exitButton"
         android:text="Exit"
         app:layout_constraintStart_toStartOf="@+id/button5"
