--- a/Projekt_TAMZ_II/app/src/main/res/layout/activity_hero.xml
+++ b/Projekt_TAMZ_II/app/src/main/res/layout/activity_hero.xml
@@ -10,11 +10,12 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/allerta"
         android:text="Class"
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.25"
+        app:layout_constraintHorizontal_bias="0.12"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.61" />
@@ -24,6 +25,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
+        android:fontFamily="@font/allerta"
         android:onClick="clickWarrior"
         android:text="Warrior"
         app:layout_constraintStart_toStartOf="@+id/textView3"
@@ -33,6 +35,7 @@
         android:id="@+id/buttonMage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/allerta"
         android:onClick="clickMage"
         android:text="Mage"
         app:layout_constraintBottom_toBottomOf="@+id/buttonWarrior"
@@ -43,6 +46,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="120dp"
+        android:fontFamily="@font/allerta"
         android:text="Name"
         android:textSize="30sp"
         app:layout_constraintBottom_toTopOf="@+id/textView3"
@@ -56,15 +60,17 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:ems="10"
+        android:fontFamily="@font/allerta"
         android:inputType="textPersonName"
         app:layout_constraintStart_toStartOf="@+id/textView4"
         app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
     <Button
         android:id="@+id/buttonSave"
-        android:layout_width="264dp"
-        android:layout_height="60dp"
+        android:layout_width="324dp"
+        android:layout_height="57dp"
         android:layout_marginTop="100dp"
+        android:fontFamily="@font/allerta"
         android:onClick="clickSubmit"
         android:text="Save"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -78,6 +84,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginBottom="8dp"
+        android:fontFamily="@font/allerta"
         android:text="warrior"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/editTextHeroName"
