--- a/Projekt_TAMZ_II/app/src/main/res/layout/activity_menu.xml
+++ b/Projekt_TAMZ_II/app/src/main/res/layout/activity_menu.xml
@@ -12,6 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/button"
+        android:fontFamily="@font/allerta"
         android:onClick="chooseLevel"
         android:text="Play"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -25,6 +26,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/button"
+        android:fontFamily="@font/allerta"
         android:onClick="quit"
         android:text="Quit"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -37,6 +39,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/button"
+        android:fontFamily="@font/allerta"
         android:onClick="heroSettings"
         android:text="Hero"
         app:layout_constraintStart_toStartOf="@+id/button"
@@ -47,6 +50,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/button"
+        android:fontFamily="@font/allerta"
         android:onClick="scoreBoardAct"
         android:text="Score board"
         app:layout_constraintBottom_toTopOf="@+id/button4"
